<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gradesRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent">


    <RadioButton
        android:id="@+id/grade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade2RadioButton"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/grade3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade3RadioButton"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/grade4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade4RadioButton"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/grade5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade5RadioButton"
        android:textSize="14sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>